tests/snapshots/run_wpt_conformance__litert_layerNormalization_float32_4D_tensor_options_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
layer_normalization.https.any.js layerNormalization float32 4D tensor options.scale, litert
 layer_normalization :: layerNormalization float32 4D tensor options.scale: index 0: actual=4.988482 expected=5.3738685 ulp=808214 tolerance=16
  inputs: layerNormInput: [-35.51446533203125, 54.735408782958984, 19.659019470214844, -15.882678031921388, 65.48657989501953, 25.818492889404297, 97.5530242919922, -8.057161331176758, 62.9412956237793, -48.91555404663086, 91.90644073486328, 46.67098617553711, -74.85331726074219, 30.126361846923828, 26.13089370727539, 59.30270767211914, -60.36199569702149, 18.55615234375, -88.03730773925781, -26.5667724609375, 70.81292724609375, 9.10561180114746, 56.66746139526367, 21.78444480895996]; layerNormScale: [-3.8228423595428462, -5.452458381652832, 0.6776165962219238, -4.027037620544434, -3.7771618366241455, -9.327335357666016, 7.1816911697387695, 1.5054303407669067, 3.120894193649292, 0.5214731693267822, 2.6719748973846436, -3.571370840072632] (constant)
  expected layerNormOutput: [5.3738685, -2.942395, -0.14666319, 3.9567862, -2.9136698, 0.78041726, 10.503914, -1.225229, 2.236204, -0.8836841 ...] (len=24)
  actual layerNormOutput: [4.988482, -6.131719, 0.1221983, 4.9726543, -4.587054, -0.19026616, 7.6359754, -2.0160189, 0.86108077, -0.70003074 ...] (len=24)
  expected layerNormOutput full nd:
[5.3738685, -2.942395, -0.14666319, 3.9567862, -2.9136698, 0.78041726, 10.503914, -1.225229, 2.236204, -0.8836841, ...] (len=24, shape=[2, 1, 4, 3])
  actual layerNormOutput full nd:
[4.988482, -6.131719, 0.1221983, 4.9726543, -4.587054, -0.19026616, 7.6359754, -2.0160189, 0.86108077, -0.70003074, ...] (len=24, shape=[2, 1, 4, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    layerNormInput: f32[2, 1, 4, 3];
  }

  consts {
    operand_1: f32[1, 4, 3] @bytes([115, 169, 116, 192, 138, 122, 174, 192, 72, 120, 45, 63, 126, 221, 128, 192, 5, 189, 113, 192, 196, 60, 21, 193, 106, 208, 229, 64, 241, 177, 192, 63, 187, 188, 71, 64, 68, 127, 5, 63, 163, 1, 43, 64, 87, 145, 100, 192]);
  }

  nodes {
    [layerNormOutput] = layerNormalization(layerNormInput, axes=null, bias=null, epsilon=0.00001, label="", scale=1);
  }

  outputs { layerNormOutput; }
}
