tests/snapshots/run_wpt_conformance__litert_leakyRelu_float16_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
leaky_relu.https.any.js leakyRelu float16 0D tensor default options, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    leakyReluInput: f16[];
  }

  nodes {
    [leakyReluOutput] = leakyRelu(leakyReluInput, alpha=0.01, label="");
  }

  outputs { leakyReluOutput; }
}
