tests/snapshots/run_wpt_conformance__litert_leakyRelu_float16_5D_tensor_options_alpha_0_0.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
leaky_relu.https.any.js leakyRelu float16 5D tensor options.alpha=0.0, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    leakyReluInput: f16[1, 2, 1, 3, 4];
  }

  nodes {
    [leakyReluOutput] = leakyRelu(leakyReluInput, alpha=0.0, label="");
  }

  outputs { leakyReluOutput; }
}
